--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,8 +1,7 @@
 env:
   browser: true
   es6: true
-extends:
-  - airbnb-base
+extends: 'eslint:recommended'
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
